# resigner

./: .gitignore  .travis.yml  README.md  admin.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
migrations/: 0001_initial.py
resigner/: admin.py  client.py  models.py  querystring.py  server.py  utils.py
resigner/migrations/: 0001_initial.py  0002_apiclient.py  0003_auto_20150616_0426.py  0004_auto_20150621_0920.py
test_project/: manage.py  settings.py  urls.py
test_project/resigner_tests/: test_querystring.py  tests.py  urls.py  views.py
